# plutus-integer-bytestring

./: CHANGELOG.md  README.md  and.csv  baseline.csv  baseline.txt  binary.txt  cabal.project  plutus-integer-bytestring.cabal  zeroes.txt
.github/workflows/: ci.yml
bench/binary/: Main.hs
bench/naive/: Main.hs
bench/zeroes/: Main.hs
bsutils/: BSUtils.hs
cbits/: bsutils.c  bsutils.h
src/: BSUtils.hs  CTConstants.hs  Naive.hs  Optimized.hs  WithBinary.hs
src/Logical/: Naive.hs  Optimized.hs
test/: Helpers.hs  Main.hs  SuitableInteger.hs
test-utils/: BytesWithIndex.hs  HexByteString.hs  IndexedByteString.hs  Laws.hs  NEByteString.hs  SuitableInteger.hs
test/binary/: Main.hs
test/bsutils/: Main.hs
test/bytestring-helpers/: Main.hs  NEByteString.hs
test/consistency/: Main.hs
test/naive/: Main.hs
