cabal-version:      3.0
name:               plutus-integer-bytestring
version:            1.0.0
synopsis:           PoC for Plutus Integer to ByteString conversions
description:        PoC for Plutus Integer to ByteString conversions
homepage:           https://github.com/mlabs-haskell/plutus-integer-bytestring
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz@mlabs.city
bug-reports:        https://github.com/mlabs-haskell/plutus-integer-bytestring
copyright:          (C) MLabs 2023
category:           Plutus
tested-with:        GHC ==9.6.3
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common sections

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wredundant-bang-patterns

  build-depends:    base ^>=4.18.1.0
  default-language: Haskell2010

common test-lang
  import:        lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , plutus-integer-bytestring
    , tasty

-- Library

library
  import:          lang
  exposed-modules:
    CTConstants
    Naive

  build-depends:
    , bsutils
    , bytestring
    , ghc-bignum

  hs-source-dirs:  src

library bsutils
  import:          lang
  exposed-modules: BSUtils
  include-dirs:    cbits
  c-sources:       cbits/bsutils.c
  cc-options:      -Wall -Wextra -Werror -O2
  hs-source-dirs:  bsutils

-- Tests

test-suite tests
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Helpers
    SuitableInteger

  build-depends:
    , bytestring
    , QuickCheck
    , tasty-quickcheck
    , transformers

  hs-source-dirs: test
