cabal-version:      3.0
name:               plutus-integer-bytestring
version:            1.0.0
synopsis:           PoC for Plutus Integer to ByteString conversions
description:        PoC for Plutus Integer to ByteString conversions
homepage:           https://github.com/mlabs-haskell/plutus-integer-bytestring
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz@mlabs.city
bug-reports:        https://github.com/mlabs-haskell/plutus-integer-bytestring
copyright:          (C) MLabs 2023
category:           Plutus
tested-with:        GHC ==9.6.3
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common sections

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  build-depends:    base >=4.14.3.0 && <4.18.1.0.0
  default-language: Haskell2010

common test-lang
  import:        lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , test-utils

common bench-lang
  import:        lang
  ghc-options:   -O2 -rtsopts -fproc-alignment=64 "-with-rtsopts=-A32m -T"
  build-depends:
    , plutus-integer-bytestring
    , tasty-bench

-- Library

library
  import:          lang
  exposed-modules:
    Naive
    WithBinary

  build-depends:
    , binary
    , bytestring
    , bytestring-strict-builder

  hs-source-dirs:  src

library test-utils
  import:          lang
  exposed-modules:
    Helpers
    NEByteString
    SuitableInteger

  build-depends:
    , bytestring
    , QuickCheck
    , quickcheck-instances

  hs-source-dirs:  test-utils

-- Tests

test-suite naive-tests
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , bytestring
    , plutus-integer-bytestring

  hs-source-dirs: test/naive

test-suite binary-tests
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , bytestring
    , plutus-integer-bytestring

  hs-source-dirs: test/binary

-- Benchmarks

benchmark naive-bench
  import:         bench-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , bytestring
    , deepseq

  hs-source-dirs: bench/naive
